--- a/NymphAppNetTester/MainWindow.xaml
+++ b/NymphAppNetTester/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="NymphAppNetTester.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="479.6" Width="525">
+        Title="MainWindow" Height="606.161" Width="937.011">
     <Grid>
         <Button Content="Authorize new App.net account" HorizontalAlignment="Left" Margin="10,61,0,0" VerticalAlignment="Top" Width="234" Click="Button_Click_1"/>
         <TextBlock HorizontalAlignment="Center" Margin="10,10,87.4,0" TextWrapping="Wrap" Text="AppNet.Net Testing Area" VerticalAlignment="Top" RenderTransformOrigin="-0.906,0" Height="46" Width="421" FontSize="36" FontStyle="Italic"/>
@@ -17,15 +17,27 @@
         <Button x:Name="buttonGetPostById" Content="Get post by id" HorizontalAlignment="Left" Margin="10,180,0,0" VerticalAlignment="Top" Width="117" Click="buttonGetPostById_Click_1" />
         <TextBox x:Name="textboxGetPostById" HorizontalAlignment="Left" Height="23" Margin="132,193,0,0" TextWrapping="Wrap" Text="795025" VerticalAlignment="Top" Width="112"/>
         <Button x:Name="buttonDeletePostById" Content="Delete post by id" HorizontalAlignment="Left" Margin="266,178,0,0" VerticalAlignment="Top" Width="117" Click="buttonDeletePostById_Click_1"/>
-        <TextBox x:Name="textboxDeletePostById" HorizontalAlignment="Left" Height="23" Margin="388,179,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="112"/>
+        <TextBox x:Name="textboxSearchUser" HorizontalAlignment="Left" Height="23" Margin="679,64,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="112" Text="apn"/>
         <Button x:Name="buttonRepliesById" Content="Get replies by id" HorizontalAlignment="Left" Margin="10,207,0,0" VerticalAlignment="Top" Width="117" Click="buttonGetPostRepliesById_Click_1" />
         <Button x:Name="buttonRepostPostbyId" Content="Repost by id" HorizontalAlignment="Left" Margin="10,234,0,0" VerticalAlignment="Top" Width="117" Click="buttonRepostPostbyId_Click_1" />
         <Button x:Name="buttonUnrepostById" Content="Unrepost by id" HorizontalAlignment="Left" Margin="10,261,0,0" VerticalAlignment="Top" Width="117" Click="buttonUnrepostById_Click_1"  />
         <Button x:Name="buttonStarById" Content="Star by id" HorizontalAlignment="Left" Margin="10,288,0,0" VerticalAlignment="Top" Width="117" Click="buttonStarById_Click_1" />
         <Button x:Name="buttonUnstarById" Content="Unstar by id" HorizontalAlignment="Left" Margin="10,315,0,0" VerticalAlignment="Top" Width="117" Click="buttonUnstarById_Click_1" />
-        <Button x:Name="buttonGetMentionsOfUsername" Content="Mentions of username" HorizontalAlignment="Left" Margin="266,234,0,0" VerticalAlignment="Top" Width="117" Click="buttonGetMentionsOfUsername_Click_1"/>
+        <Button x:Name="buttonGetMentionsOfUsername" Content="Mentions of username" HorizontalAlignment="Left" Margin="266,237,0,0" VerticalAlignment="Top" Width="117" Click="buttonGetMentionsOfUsername_Click_1"/>
         <TextBox x:Name="textboxUsername" HorizontalAlignment="Left" Height="23" Margin="388,234,0,0" TextWrapping="Wrap" Text="liGhun" VerticalAlignment="Top" Width="112"/>
         <Button Content="Get global stream" HorizontalAlignment="Left" Margin="132,88,0,0" VerticalAlignment="Top" Width="112" x:Name="buttonGetGlobalStream" Click="buttonGetGlobalStream_Click_1" />
+        <Button x:Name="buttonGetUserById" Content="Get user by username" HorizontalAlignment="Left" Margin="266,262,0,0" VerticalAlignment="Top" Width="117" Click="buttonGetUserById_Click_1"/>
+        <Button x:Name="buttonFollow" Content="Follow" HorizontalAlignment="Left" Margin="266,288,0,0" VerticalAlignment="Top" Width="117" Click="buttonFollow_Click_1"/>
+        <Button x:Name="buttonUnfollow" Content="Unfollow" HorizontalAlignment="Left" Margin="266,315,0,0" VerticalAlignment="Top" Width="117" Click="buttonUnfollow_Click_1"/>
+        <Button x:Name="buttonGetFollowings" Content="Get followings" HorizontalAlignment="Left" Margin="266,340,0,0" VerticalAlignment="Top" Width="117" Click="buttonGetFollowings_Click_1"/>
+        <Button x:Name="buttonGetFollowers" Content="Get followers" HorizontalAlignment="Left" Margin="266,365,0,0" VerticalAlignment="Top" Width="117"  Click="buttonGetFollowers_Click_1"/>
+        <Button x:Name="buttonMute" Content="Mute" HorizontalAlignment="Left" Margin="266,390,0,0" VerticalAlignment="Top" Width="117" Click="buttonMute_Click_1"/>
+        <Button x:Name="buttonUnmute" Content="Unmute" HorizontalAlignment="Left" Margin="266,415,0,0" VerticalAlignment="Top" Width="117" Click="buttonUnmute_Click_1"/>
+        <Button x:Name="buttonGetMutedUsers" Content="Get muted user" HorizontalAlignment="Left" Margin="266,440,0,0" VerticalAlignment="Top" Width="117" Click="buttonGetMutedUsers_Click_1"/>
+        <Button x:Name="buttonSearchUser" Content="Search user" HorizontalAlignment="Left" Margin="557,67,0,0" VerticalAlignment="Top" Width="117" Click="buttonSearchUser_Click_1"/>
+        <TextBox x:Name="textboxDeletePostById" HorizontalAlignment="Left" Height="23" Margin="388,175,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="112" Text="123456"/>
+        <Button x:Name="buttonGetReposters" Content="Get reposters" HorizontalAlignment="Left" Margin="10,365,0,0" VerticalAlignment="Top" Width="117" Click="buttonGetReposters_Click_1" />
+        <Button x:Name="buttonGetUsersWhoStarred" Content="GetUsersWhoStarred" HorizontalAlignment="Left" Margin="10,390,0,0" VerticalAlignment="Top" Width="117" Click="buttonGetUsersWhoStarred_Click_1" />
 
     </Grid>
 </Window>
