--- a/AppNetDotNet/Helper/Authorize new App.net account.xaml
+++ b/AppNetDotNet/Helper/Authorize new App.net account.xaml
@@ -1,9 +1,8 @@
 ﻿<Window x:Class="AppNetDotNet.AuthorizationWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Authorize new App.net account" Height="497.185" Width="674.503" Icon="/AppNetDotNet;component/alpha.png">
-    <Grid>
-        <WebBrowser Name="webBrowserAuthorization" Margin="10,10,10,10" />
+        Title="Authorize new App.net account" Height="768" Width="1024" Icon="/AppNetDotNet;component/alpha.png">
+    <Grid Name="mainGrid">
 
     </Grid>
 </Window>
