--- a/NymphAppNetTester/MainWindow.xaml
+++ b/NymphAppNetTester/MainWindow.xaml
@@ -1,7 +1,9 @@
 ﻿<Window x:Class="NymphAppNetTester.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="606.161" Width="937.011" Icon="alpha.png">
+        Title="MainWindow" Height="606.161" Width="937.011" Icon="alpha.png"
+        Closing="Window_Closing_1"
+        >
     <Grid>
         <Button Content="Authorize new App.net account" HorizontalAlignment="Left" Margin="10,61,0,0" VerticalAlignment="Top" Width="234" Click="Button_Click_1"/>
         <TextBlock HorizontalAlignment="Center" Margin="10,10,87.4,0" TextWrapping="Wrap" Text="AppNet.Net Testing Area" VerticalAlignment="Top" RenderTransformOrigin="-0.906,0" Height="46" Width="421" FontSize="36" FontStyle="Italic"/>
@@ -48,6 +50,7 @@
         <Button x:Name="buttonChannelsOfLoogedinUser" Content="Get channels of user" HorizontalAlignment="Left" Margin="557,355,0,0" VerticalAlignment="Top" Width="117" Click="buttonChannelsOfLoogedinUser_Click"/>
         <TextBox x:Name="textboxChannelIds" HorizontalAlignment="Left" Height="23" Margin="679,355,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="226"/>
         <Button x:Name="buttonGetMessagesInChannel" Content="Get messages in channel" HorizontalAlignment="Left" Margin="557,382,0,0" VerticalAlignment="Top" Width="117" Click="buttonGetMessagesInChannel_Click" />
+        <Button x:Name="button_openFilesWindow" Content="Open files test window" HorizontalAlignment="Left" Margin="557,440,0,0" VerticalAlignment="Top" Width="117" Click="button_openFilesWindow_Click"/>
 
     </Grid>
 </Window>
