--- a/NymphAppNetTester/FileApiTests.xaml
+++ b/NymphAppNetTester/FileApiTests.xaml
@@ -69,6 +69,8 @@
         <Button Name="button_download" Content="Download" HorizontalAlignment="Left" Margin="10,146,0,0" VerticalAlignment="Top" Width="162" Click="button_download_Click_1"/>
         <TextBlock Margin="0,0,190.6,13.6" TextWrapping="Wrap" Text="Type (create)" Height="17" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="73"/>
         <TextBox x:Name="textbox_type" Margin="0,0,10.2,9.6" TextWrapping="Wrap" Text="com.li-ghun.upload.example" Height="24" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="175"/>
+        <Button x:Name="button_uploadFileAndCreatePost" Content="Upload File + create post" HorizontalAlignment="Left" Margin="10,173,0,0" VerticalAlignment="Top" Width="162" RenderTransformOrigin="-0.332,-0.625" Click="button_uploadFileAndCreatePost_Click_1"/>
+        <TextBox x:Name="textbox_postContent" HorizontalAlignment="Left" Height="113" Margin="10,200,0,0" TextWrapping="Wrap" Text="This is an example post to whom a file is attache using .NET" VerticalAlignment="Top" Width="162"/>
 
     </Grid>
 </Window>
