Added Model.Authorization.registerAppInRegistry() which will create the needed registry entries for the non-quirks-mode-auth window Auhtorization now starts a logout in default before starting the auth flow in order to authorize multiple accounts in a row Added Model.interaction Added ApiCall.Interactions Interactions model automatically parses the objects field for users and/or posts and writes them to custom follower or posts attributes Fix: Private messages posting sent the DateTime with value 0:0:0 - not send anymore at all

--- a/NymphAppNetTester/MainWindow.xaml
+++ b/NymphAppNetTester/MainWindow.xaml
@@ -52,6 +52,7 @@
         <Button x:Name="buttonGetMessagesInChannel" Content="Get messages in channel" HorizontalAlignment="Left" Margin="557,382,0,0" VerticalAlignment="Top" Width="117" Click="buttonGetMessagesInChannel_Click" />
         <Button x:Name="button_openFilesWindow" Content="Open files test window" HorizontalAlignment="Left" Margin="557,440,0,0" VerticalAlignment="Top" Width="117" Click="button_openFilesWindow_Click"/>
         <Button x:Name="button_openPlacesWindow" Content="Open place window" HorizontalAlignment="Left" Margin="557,467,0,0" VerticalAlignment="Top" Width="117" Click="button_openPlacesWindow_Click" />
+        <Button x:Name="buttonGetInteractions" Content="Get interactions of me" HorizontalAlignment="Left" Margin="557,115,0,0" VerticalAlignment="Top" Width="117" Click="buttonGetInteractions_Click_1"/>
 
     </Grid>
 </Window>
