--- a/NymphAppNetTester/MainWindow.xaml
+++ b/NymphAppNetTester/MainWindow.xaml
@@ -53,6 +53,7 @@
         <Button x:Name="button_openFilesWindow" Content="Open files test window" HorizontalAlignment="Left" Margin="557,440,0,0" VerticalAlignment="Top" Width="117" Click="button_openFilesWindow_Click"/>
         <Button x:Name="button_openPlacesWindow" Content="Open place window" HorizontalAlignment="Left" Margin="557,467,0,0" VerticalAlignment="Top" Width="117" Click="button_openPlacesWindow_Click" />
         <Button x:Name="buttonGetInteractions" Content="Get interactions of me" HorizontalAlignment="Left" Margin="557,115,0,0" VerticalAlignment="Top" Width="117" Click="buttonGetInteractions_Click_1"/>
+        <Button x:Name="buttonTextProcessor" Content="Process text ->" HorizontalAlignment="Left" Margin="557,223,0,0" VerticalAlignment="Top" Width="117" Click="buttonTextProcessor_Click_1" RenderTransformOrigin="0.497,1.732"/>
 
     </Grid>
 </Window>
